[tool.poetry]
name = "oceans-1876-api"
version = "0.1.0"
description = ""
authors = ["Kaveh Karimi <kaveh@illinois.edu>"]

[tool.poetry.dependencies]
python = "~3.10"
uvicorn = "~0.18"
fastapi = "~0.79"
passlib = {extras = ["bcrypt"], version = "~1.7"}
tenacity = "~8.0"
pydantic = {extras = ["dotenv", "email"], version = "~1.9"}
emails = "~0.6"
raven = "~6.10"
gunicorn = "~20.1"
jinja2 = "~3.1"
psycopg2-binary = "~2.9"
alembic = "~1.8"
sqlalchemy = "~1.4"
python-jose = {extras = ["cryptography"], version = "~3.3"}
python-multipart = "~0.0"
GeoAlchemy2 = "~0.12"
SQLAlchemy = {extras = ["mypy"], version = "~1.4"}
aiofiles = "~0.8"

[tool.poetry.dev-dependencies]
mypy = "~0.971"
black = "~22.6"
isort = "~5.10"
autoflake = "~1.4"
flake8 = "~5.0"
pytest = "~7.1"
pytest-cov = "~3.0"
pre-commit = "~2.20"
sqlalchemy2-stubs = "~0.0.2a24"
alembic-autogen-check = "^1.1.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
