[tool.poetry]
name = "oceans-1876-api"
version = "0.1.0"
description = ""
authors = ["Kaveh Karimi <kaveh@illinois.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
aiofiles = "~22.1"
alembic = "~1.8"
emails = "~0.6"
fastapi = "~0.88"
GeoAlchemy2 = "~0.12"
gunicorn = "~20.1"
jinja2 = "~3.1"
passlib = { extras = ["bcrypt"], version = "~1.7" }
psycopg2-binary = "~2.9"
pydantic = { extras = ["dotenv", "email"], version = "~1.10" }
python-jose = { extras = ["cryptography"], version = "~3.3" }
python-multipart = "~0.0"
raven = "~6.10"
SQLAlchemy = { extras = ["mypy"], version = "~1.4" }
tenacity = "~8.0"
uvicorn = "~0.20"

[tool.poetry.dev-dependencies]
alembic-autogen-check = "^1.1.1"
autoflake = "~2.0"
black = { extras = ["d"], version = "~22.10" }
flake8 = "~6.0"
isort = "~5.10"
mypy = "~0.991"
pytest = "~7.2"
pre-commit = "~2.20"
pytest-cov = "~4.0"
sqlalchemy2-stubs = "~0.0.2a25"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
